--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
+# =====================
+# Python Universal Ignores
+# =====================
+
+# Virtual environments (all possible locations)
+**/venv/
+**/.venv/
+**/ENV/
+**/env/
+
+# Python cache and compiled files
+**/__pycache__/
+**/*.py[cod]
+**/*$py.class
+
+# Package directories
+**/site-packages/
+**/dist/
+**/build/
+**/*.egg-info/
+
+# IDE and editor files
+**/.vscode/
+**/.idea/
+**/*.swp
+**/*.swo
+
+# Temp and local files
+**/temp*/
+**/tmp*/
+**/*.log
+**/*.bak
+
 .DS_Store
